tests/snapshots/integration__integration_tests__config_list__config_list_outside_repo.snap
---
source: tests/integration_tests/config_list.rs
assertion_line: 128
info:
  program: wt
  args:
    - config
    - list
  env:
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpEhOevy
---
success: true
exit_code: 0
----- stdout -----
Global Config: [TEMP_HOME]/.config/worktrunk/config.toml
  worktree-path = "../{main-worktree}.{branch}"

Project Config: Not in a git repository

----- stderr -----
